turtleart.circletwo.CircleTwo.scala.error
Erreur de compilation :
CircleTwo:10: error: Unmatched closing brace '}' ignored here
} 
^CircleTwo:12: error: eof expected but '}' found.
}
^