turtleart.circletwo.CircleTwo.scala.code
override def run() {
    for(x<-0 to 360-1){
    avance(2)
    droite(1)}
}
    for(x<-0 to 360-1){
    avance(4)
    droite(1)}
}
}